# PFDataTool

./: Application.cpp  Application.h  README.md  main.cpp  meson.build
archive/: Archive.h  ArchiveReader.cpp  ArchiveReader.h  ArchiveWriter.cpp  ArchiveWriter.h  FileSegments.h
compression/: Compression.h  ICompressAlgorithm.h  LZ4Algorithm.cpp  LZ4Algorithm.h  NoCompression.cpp  NoCompression.h
compression/lz4/: lz4.c  lz4.h
crypto/: AES256.cpp  AES256.h  Cryptography.h  Hash.h  IEncryptionAlgorithm.h  NoEncryption.cpp  NoEncryption.h
types/: Types.h
