project('PFDataTool','cpp','c',default_options:['cpp_std=c++17'])
project_files = files(['main.cpp',
'Application.h',
'Application.cpp',
'archive/Archive.h',
'archive/ArchiveWriter.h',
'archive/ArchiveWriter.cpp',
'archive/ArchiveReader.h',
'archive/ArchiveReader.cpp',
'archive/FileSegments.h',
'compression/lz4/lz4.h',
'compression/lz4/lz4.c',
'compression/Compression.h',
'compression/ICompressAlgorithm.h',
'compression/LZ4Algorithm.h',
'compression/LZ4Algorithm.cpp',
'compression/NoCompression.h',
'compression/NoCompression.cpp',
'crypto/Hash.h',
'crypto/IEncryptionAlgorithm.h',
'crypto/Cryptography.h',
'crypto/AES256.h',
'crypto/AES256.cpp',
'crypto/NoEncryption.h',
'crypto/NoEncryption.cpp',
'types/Types.h'
])

executable('PFDataTool',project_files)
